54. Update Pagination Ssystem 
    - Allow developers to add custum class to ul,li and a tag.
55. Update Language Class.
56. Update Root class fix typos.
57. Delete Language Class form Component 
	- Now you can use printl function in component as well
58. Update PasswordManipulation class
    - Added method for set custum password length
59. Added HTTP Request library more will added soon.
60. Update Router class using http\Request.
61. Add HTTP Redirect class.
62. Add HTTP Response class.
63. Update HTTP Response class.
64. Added HTTP Message class.
65. Added HTTP Headers classs.
66. Added HTTP URI class.
67. Update Files Class.
    - Add touch method for (Sets access and modification time of file).
	- Add chown method for (Change the owner of files).
68. Added HTTP Client Classes.
69. Complete HTTP Package.
70. Remove Useless CSRF class.
71. Remove function is_ajax() form helpers.php.
72. Update Input class remove csrf methods.
73. Added Middleware supports in Routes.
74. Added few more rests routes OPTIONS, TRACE and CONNECT.
75. Added Middleware supports in Components.
76. Update Logger class add setCustumFile() method.
77. Update Expection class use Logger in expection for creating log file.
78. Update input Class (code optimization) => https://github.com/Softhub99/Zest/issues/24
79. Update Dependency Injection system.
    - now you can use container() and __container() function to access IOC class.
80. Added Configuraion class.
81. Update Zest Classes using new config file.
82. Added destroy method in session class for destroy all sessions.
83. Added close() method in FileHandling class.
84. Added New cache System old system is deprecated.
	- Supported Adapters
	  A. APC
	  B. APCU
	  C. FileSystem
	  D. Memcache
	  E. Memcached
	  F. Redis
	  G. Session
85 Update router cache and router middleware.	  
86. Remove (48) Callbacks form router.
87. Added Hashing System.
88. Deprecated passwordManipulation class hashMatched and hashPassword method.