@@ -1,0 +1,55 @@
+<?php
+
+/**
+ * This file is part of the Zest Framework.
+ *
+ * @author   Malik Umer Farooq <lablnet01@gmail.com>
+ * @author-profile https://www.facebook.com/malikumerfarooq01/
+ *
+ * For the full copyright and license information, please view the LICENSE
+ *  file that was distributed with this source code.
+ *
+ * @since 3.0.0
+ *
+ * @license MIT
+ */
+
+namespace Zest\Contracts\Encryption;
+
+interface Encrypt
+{
+
+    /**
+     * Set the adapter.
+     *
+     * @param (string) $adapter
+     *
+     * @since 3.0.0
+     *
+     * @return object
+     */     
+    public static function setAdapter($adapter);
+
+    /**
+     * Encrypt the message.
+     *
+     * @param (mixed) $data data to be encrypted
+     *
+     * @since 3.0.0
+     *
+     * @return mixed
+     */
+    public static function encrypt($data, $adapter = null);
+
+    /**
+     * Decrypt the message.
+     *
+     * @param (mixed) $token encrypted token
+     *
+     * @since 3.0.0
+     *
+     * @return mixed
+     */
+    public static function decrypt($token, $adapter = null);
+
+}
